--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="CSS/style_portafolio.css">
     <link rel="stylesheet" href="CSS/font-awesome.min.css">
     <!-- Enlace externo para JavaScript -->
-    <script src="js/jquery-latest.js"></script>
+    <script src="JS/jquery-latest.js"></script>
 </head>
 <body>
     <div class="contenedor">
