--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="CSS/style_portafolio.css">
     <link rel="stylesheet" href="CSS/font-awesome.min.css">
     <!-- Enlace externo para JavaScript -->
-    <script src="JS/jquery-latest.js"></script>
+    <script src="js/jquery-latest.js"></script>
 </head>
 <body>
     <div class="contenedor">
@@ -29,7 +29,7 @@
                 </nav>
             </header>
             <div  class="frase">
-                <a href="#"><img class="logo" src="IMG/memo.png"  width="150px" height="150px" alt=""></a>
+                <a href="#"><img class="logo" src="img/memo.png"  width="150px" height="150px" alt=""></a>
                 <h1>BIENVENIDOS <br> Y como dijo Albert Einstein <br> "Nunca consideres el estudio como una obligación, sino como una oportunidad para penetrar en el bello y maravilloso mundo del saber" </h1>
             </div>
         </section>
@@ -37,7 +37,7 @@
     <div class="contenedor">
         <section id="perfil">
             <div class="present">
-                <img class="per" src="IMG/yo.jpg" width="150px" height="150px" alt="Falta imagen yo.jpg"title="IMAGEN">
+                <img class="per" src="img/yo.jpg" width="150px" height="150px" alt="Falta imagen yo.jpg"title="IMAGEN">
                 <p>Mi nombre es Guillermo Antonio Cruz Diaz, Tengo 21 años <br> Actualmente estudio en la Universidad Mexiquense del Bicentenario <br> UES San José del Rincón <br> Curso la carrera de Ingenieria en Sistemas Computacionales, esperando mas adelante especializarme por completo en un campo en especifico.</p>
             </div>
         </section>
@@ -45,9 +45,9 @@
     <div class="contenedor">
         <section id="temas">
             <div class="tem">
-                <div class="t">HTML <br> <img class="image" src="IMG/html.jpg" width="300px" height="300px" alt="Falta imagen html.jpg"title="HTML"></div>
-                <div class="t">CSS <br> <img class="image1" src="IMG/css.jpeg" width="300px" height="300px" alt="Falta imagen css.jpg"title="CSS"></div>
-                <div class="t">PYTHON <br> <img class="image2" src="IMG/python.jpg" width="300px" height="300px" alt="Falta imagen python.jpg"title="PYTHON"></div>
+                <div class="t">HTML <br> <img class="image" src="img/html.jpg" width="300px" height="300px" alt="Falta imagen html.jpg"title="HTML"></div>
+                <div class="t">CSS <br> <img class="image1" src="img/css.jpeg" width="300px" height="300px" alt="Falta imagen css.jpg"title="CSS"></div>
+                <div class="t">PYTHON <br> <img class="image2" src="img/python.jpg" width="300px" height="300px" alt="Falta imagen python.jpg"title="PYTHON"></div>
             </div>
         </section>
     </div>
@@ -87,7 +87,7 @@
                 <h6 class="derechos">Elavorado por Guillermo Antonio Cruz Diaz</h6>
             </seccion>
         </footer>
-        <script src="JS/jquery-packed_plugins.min.js"></script>
-        <script src="JS/smooth.js"></script>
+        <script src="js/jquery-packed_plugins.min.js"></script>
+        <script src="js/smooth.js"></script>
 </body>
 </html>
